
	* buf.h (tino_buf_get_s_nonconst, tino_buf_get_nonconst): added

2006-07-17    <tino@firebird.03.softkill.net>

	* setuptino.sh: add tino/ directory to CVS

	* getopt.h (tino_getopt_var_to_str): added ' to character output

	* setuptino.sh: Checkout instead of copy, it gets tedious to
	cleanup after the copy always .. ;)

2006-06-17    <tino@firebird.03.softkill.net>

	* Makefile.proto (static): "make static" failed switching into
	static mode the first time

2006-06-16    <tino@firebird.03.softkill.net>

	* Makefile.proto (install): typo corrected

2006-06-11    <tino@firebird.03.softkill.net>

	* Makefile.awk (#S): Added variable prefix

	* Makefile.proto (install): Rule added to process additional
	INSTALL* targets, also preset the PATHs

	* Makefile.tino.dist (INSTALL*): added

	* Makefile-diff.awk (END): 3 more cvs tag lines (doubled)

	* Makefile-tar.sh (exists): As preparation to public CVS access
	added general "dist-TOOL" tag.

2006-06-10    <tino@firebird.03.softkill.net>

	* getopt.h (tino_getopt_var_to_str): Buglet: If flag was inited to
	negative value its exceptional value was not explicitely printed.

2006-04-11    <tino@firebird.03.softkill.net>

	* buf.h (tino_buf_write_out): added

	* proc.h (tino_fd_keep): added
	(tino_fd_move): flipped args, be sure to look at the warnings!
	(tino_fork_exec): tino_fd_keep used now instead implicite loop.

2006-03-18    <tino@firebird.03.softkill.net>

	* str.h (tino_strnprefixcmp2_const, tino_strnprefixcmp2): added

2006-03-17    <tino@firebird.03.softkill.net>

	* md5.h (main): implemented

	* Makefile-test.sh, Makefile (test, $(UNITTEST)/Makefile): New
	method for "make test".  Do a "make clean test" to recreate it in
	case something bigger has changed.

2006-02-12    <tino@firebird.03.softkill.net>

	* html_entities.h: added
	(tino_html_entities): sigh .. never CI before the first compile

2006-02-11    <tino@firebird.03.softkill.net>

	* debug.h, dirty.h, getopt.h, sock.h: "TINO_XXX;" instead of